--- a/templates/dashboards/all_admin_pages/create_class_timetable.html
+++ b/templates/dashboards/all_admin_pages/create_class_timetable.html
@@ -130,7 +130,7 @@
     </div>
     </div>
 
-    <button type="submit" class="bg-gray-300 p-3 rounded-lg mt-2 text-gray-600 hover:text-gray-800">Create</button>
+    <button type="submit" class="bg-blue-500 p-3 rounded-lg mt-2 text-white hover:bg-blue-300">Create</button>
 </form>
 </div>
 </div>
