--- a/templates/dashboards/all_teacher_pages/attendance_record.html
+++ b/templates/dashboards/all_teacher_pages/attendance_record.html
@@ -17,7 +17,7 @@
                 <span class="font-medium">Select Year</span>
                 {{ forms.year }}
             </div>
-            <button class="p-1 bg-blue-500 text-white rounded-lg" type="submit">Generate Attendance Table</button>
+            <button class="px-2 py-1 bg-blue-500 text-white rounded-lg" type="submit">Generate Attendance Table</button>
         </form>
     </div>
 
