--- a/templates/dashboards/all_teacher_pages/base.html
+++ b/templates/dashboards/all_teacher_pages/base.html
@@ -6,6 +6,7 @@
 {% url 'teacher_dashboard' as teacher_dashboard %}
 {% url 'select_class_attendance' as select_class_attendance %}
 {% url 'grade_student_nav' as grade_student_nav %}
+{% url 'annoucements' as annoucements%}
 
 
 
@@ -43,8 +44,8 @@
         </ul>
         <!--  -->
         <ul class="side-menu">
-        <li>
-            <a href="#">
+        <li class="{%if request.path == annoucements%}active{%else%}{%endif%}">
+            <a href="{{annoucements}}">
                 <i class='bx bxs-book-reader' ></i>
                 <span class="text">Announcements</span>
             </a>
