--- a/templates/dashboards/all_teacher_pages/report_card.html
+++ b/templates/dashboards/all_teacher_pages/report_card.html
@@ -3,95 +3,99 @@
 {% load custom_filters %}
 {% block section %}
 
-<div class="bg-card  rounded-lg shadow-md m-3 rounded-lg bg-white">
-  <div class="mb-6 text-white invisible">h</div>
-  <div class="flex justify-center item-center w-full bg-blue-100">
-    <div class="py-7 flex md:space-x-4 space-x-0">
-      <div>
-      <img src="{%static 'img/school-logo.png'%}" alt="school-logo" loading="lazy" height="130px" width="130px">
-      </div>
-      <div class="md:mt-6 sm:mt-3 mt-6 pl-1">
-        <h1 class="md:text-3xl text-2xl  font-bold text-blue-500 md:tracking-wide tracking-normal">REPORT CARD</h1>
-        <h2 class="text-xl text-muted-foreground text-blue-500">Salford High School</h2>
-      </div>
-  </div>
-</div>
-  <div class="p-6">
-    <div class="mt-4 grid md:grid-cols-3 grid-cols-2 gap-2 md:gap-5">
-      <div>
-        <label class="block  text-lg font-medium text-gray-700">Student Name:</label>
-        <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-          {{ student.user.first_name|upper}} {{ student.user.last_name|upper}}
+{% if student and grades and student_position_and_comment_view %}
+    <div class="bg-card rounded-lg shadow-md m-3 rounded-lg bg-white">
+        <div class="mb-6 text-white invisible">h</div>
+        <div class="flex justify-center item-center w-full bg-blue-100">
+            <div class="py-7 flex md:space-x-4 space-x-0">
+                <div>
+                    <img src="{% static 'img/school-logo.png' %}" alt="school-logo" loading="lazy" height="130px" width="130px">
+                </div>
+                <div class="md:mt-6 sm:mt-3 mt-6 pl-1">
+                    <h1 class="md:text-3xl text-2xl font-bold text-blue-500 md:tracking-wide tracking-normal">REPORT CARD</h1>
+                    <h2 class="text-xl text-muted-foreground text-blue-500">Salford High School</h2>
+                </div>
+            </div>
         </div>
-      </div>
-  
-      
-      <div>
-        <label class="block text-lg font-medium text-gray-700">Class:</label>
-        <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-          {{student.student_class|upper}}
+        <div class="p-6">
+            <div class="mt-4 grid md:grid-cols-3 grid-cols-2 gap-2 md:gap-5">
+                <div>
+                    <label class="block md:text-lg text-normal font-medium text-gray-700">Student Name:</label>
+                    <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                        {{ student.user.first_name|upper }} {{ student.user.last_name|upper }}
+                    </div>
+                </div>
+                <div>
+                    <label class="block md:text-lg text-normal font-medium text-gray-700">Class:</label>
+                    <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                        {{ student.student_class|upper }}
+                    </div>
+                </div>
+                <div>
+                    <label class="block md:text-lg text-normal font-medium text-gray-700">Year:</label>
+                    <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                        {{ current_year }}
+                    </div>
+                </div>
+                <div>
+                    <label class="block md:text-lg text-normal font-medium text-gray-700">Term:</label>
+                    <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                        {{ grades.first.term }}
+                    </div>
+                </div>
+            </div>
+            <div class="table-data">
+                <div style="background-color: white;">
+                    <table class="mt-6 w-full border-collapse min-w-full">
+                        <thead>
+                            <tr class="bg-muted text-muted-foreground">
+                                <th class="border-2 border-gray-300 p-2 font-bold text-gray-700 md:text-lg text-sm">Subject</th>
+                                <th class="border-2 border-gray-300 p-2 font-bold text-gray-700 md:text-lg text-sm">First Test</th>
+                                <th class="border-2 border-gray-300 p-2 font-bold text-gray-700 md:text-lg text-sm">Second Test</th>
+                                <th class="border-2 border-gray-300 p-2 font-bold text-gray-700 md:text-lg text-sm">Exam</th>
+                                <th class="border-2 border-gray-300 p-2 font-bold text-gray-700 md:text-lg text-sm">Grade</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for grade in grades %}
+                                <tr>
+                                    <td class="border-2 border-gray-300 p-2 text-center">{{ grade.subject }}</td>
+                                    <td class="border-2 border-gray-300 p-2 text-center">{{ grade.first_test_score }}</td>
+                                    <td class="border-2 border-gray-300 p-2 text-center">{{ grade.second_test_score }}</td>
+                                    <td class="border-2 border-gray-300 p-2 text-center">{{ grade.exam_score }}</td>
+                                    <td class="border-2 border-gray-300 p-2 text-center">{{ grade.final_grade }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-      </div>
- 
-      <div>
-        <label class="block text-lg font-medium text-gray-700">Year:</label>
-        <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-          {{current_year}}
-        </div>
-      </div>
 
-      <div>
-        <label class="block text-lg font-medium text-gray-700">Term:</label>
-        <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-          {{ grades.first.term }}
+        {% for position in student_position_and_comment_view %}
+        <div class="p-6">
+            <div>
+                <label class="block text-muted-foreground mt-4 md:text-lg text-normal font-medium text-gray-700">Position:</label>
+                <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                    {{ position.position }}
+                </div>
+            </div>
+            <div class="my-7">
+                <h3 class="text-muted-foreground md:text-lg text-normal font-medium text-gray-700">GRADING SCALE:</h3>
+                <p class="text-muted-foreground">A = 90% - 100% | B = 80% - 89% | C = 60% - 79% | D = 0% - 59%</p>
+            </div>
+            <label class="block text-muted-foreground mt-4 md:text-lg text-normal font-medium text-gray-700">Comment:</label>
+            <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
+                {{ position.comment }}
+            </div>
         </div>
-      </div>
+        {% endfor %}
     </div>
-  
-    <table class="mt-6 w-full border-collapse">
-      <thead>
-        <tr class="bg-muted text-muted-foreground">
-          <th class="border-2 border-gray-300 p-2 font-bold text-gray-700">Subject</th>
-          <th class="border-2 border-gray-300 p-2 font-bold text-gray-700">First Test</th>
-          <th class="border-2 border-gray-300 p-2 font-bold text-gray-700">Second Test</th>
-          <th class="border-2 border-gray-300 p-2 font-bold text-gray-700">Exam</th>
-          <th class="border-2 border-gray-300 p-2 font-bold text-gray-700">Grade</th>
-        </tr>
-      </thead>
-      <tbody>
-        
-      {%for grade in grades%}
-      <tr>
-        <td class="border-2 border-gray-300 p-2 text-center">{{grade.subject}}</td>
-        <td class="border-2 border-gray-300 p-2 text-center">{{grade.first_test_score}}</td>
-        <td class="border-2 border-gray-300 p-2 text-center">{{grade.second_test_score}}</td>
-        <td class="border-2 border-gray-300 p-2 text-center">{{grade.exam_score}}</td>
-        <td class="border-2 border-gray-300 p-2 text-center">{{grade.final_grade}}</td>
-      </tr>
-      {%endfor%}
-      </tbody>
-    </table>
-  </div>
-  <div class="p-6">
-  <div>
-    <label class="block text-muted-foreground mt-4 text-lg font-medium text-gray-700">Position:</label>
-    <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-      {%for position in student_position_and_comment_view %}
-        {{position.position}}
-        {%endfor%}
-    </div>
-  </div>
-  
-    <div class="mt-6">
-      <h3 class="text-muted-foreground text-lg font-medium text-gray-700">GRADING SCALE:</h3>
-      <p class="text-muted-foreground">A = 90% - 100% | B = 80% - 89% | C = 60% - 79% | D = 0% - 59%</p>
-  
-      <label class="block text-muted-foreground mt-4 text-lg font-medium text-gray-700">Comment:</label>
-      <div class="border-b-2 border-gray-300 rounded p-2 w-full bg-white">
-        {%for position in student_position_and_comment_view %}
-        {{position.comment}}
-        {%endfor%}
-      </div>
-    </div>
-  </div>
+{% else %}
+    <p class="bg-white text-gray-700 py-4 px-6 m-3 rounded-lg text-center font-medium text-2xl">Sorry, No Student Report Card Yet. 
+        <br>
+        <span class="font-normal text-xl">All Student Grades Must Be Filled To Reveal Full Student Report Card</span>
+    </p>
+{% endif %}
+
 {% endblock section %}
