--- a/templates/dashboards/all_teacher_pages/grade_form.html
+++ b/templates/dashboards/all_teacher_pages/grade_form.html
@@ -21,46 +21,46 @@
         <div class="grid grid-cols-2 md:grid-cols-2 gap-3">
 
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.first_test_score.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.first_test_score.label_tag}}</p>
             {{gradeForm.first_test_score}}
         </div>
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.first_test_grade.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.first_test_grade.label_tag}}</p>
             {{gradeForm.first_test_grade}}
         </div>
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.second_test_score.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.second_test_score.label_tag}}</p>
             {{gradeForm.second_test_score}}
         </div>
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.second_test_grade.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.second_test_grade.label_tag}}</p>
             {{gradeForm.second_test_grade}}
         </div>
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.exam_score.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.exam_score.label_tag}}</p>
             {{gradeForm.exam_score}}
         </div>
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.exam_grade.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.exam_grade.label_tag}}</p>
             {{gradeForm.exam_grade}}
         </div>
 
         </div>
 
         <div class="mb-3">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.final_grade.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.final_grade.label_tag}}</p>
             {{gradeForm.final_grade}}
         </div>
         <div class="mb-4">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.out_of.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.out_of.label_tag}}</p>
             {{gradeForm.out_of}}
         </div>
         <div class="mb-7">
-            <p class="text-lg font-medium text-gray-700 mb-1">{{gradeForm.grade.label_tag}}</p>
+            <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.grade.label_tag}}</p>
             {{gradeForm.grade}}
         </div>
-        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg text-lg font-medium mb-1" type="submit">submit</button>
-        <a href="{%url 'clear_grades' student_id=student.id%}" class="bg-red-500 text-white py-2 px-4 rounded-lg text-lg font-medium mb-1" >Clear Form</a>
+        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" type="submit">submit</button>
+        <a href="{%url 'clear_grades' student_id=student.id%}" class="bg-red-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" >Clear Existing Form</a>
 
     </form>
 </div>
