--- a/templates/dashboards/all_teacher_pages/student_position_and_comment.html
+++ b/templates/dashboards/all_teacher_pages/student_position_and_comment.html
@@ -14,8 +14,8 @@
             <p class="text-lg font-medium text-gray-700 mb-1">{{form.comment.label_tag}}</p>
             {{form.comment}}
         </div>
-        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg text-lg font-medium mb-1" type="submit">submit</button>
-        <a href="{%url 'clear_student_position' student_id=student.id%}" class="bg-red-500 text-white py-2 px-4 rounded-lg text-lg font-medium mb-1" >Clear Form</a>
+        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg md:text-lg md:font-medium font-normal mb-1 text-normal" type="submit">submit</button>
+        <a href="{%url 'clear_student_position' student_id=student.id%}" class="bg-red-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" >Clear Existing Form</a>
     </form>
 </div>
 {% endblock section %}
