--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -4,8 +4,12 @@
 
 {% url 'student_dashboard' as student_dashboard%}
 {% url 'view_class_timetable' as view_class_timetable%}
+{% url 'view_student_grades' as view_student_grades%}
 {% url 'student_teacher' as student_teacher%}
 {% url 'view_class_attendance' as view_class_attendance%}
+{% url 'annoucement' as annoucement%}
+{% url 'student_details_page' as student_details_page%}
+
 
 
     <!-- SIDEBAR -->
@@ -39,8 +43,8 @@
                     <span class="text">Attendance Record</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="{%if request.path == view_student_grades%} active {%else%}{%endif%}">
+                <a href="{{view_student_grades}}">
                     <i class='bx bxs-edit-alt'></i>
                     <span class="text">My grades</span>
                 </a>
@@ -48,10 +52,16 @@
         </ul>
         <!--  -->
         <ul class="side-menu">
-        <li>
-            <a href="#">
+            <li class="{%if request.path == annoucement%} active {%else%}{%endif%}">
+                <a href="{{annoucement}}">
+                    <i class='bx bxs-book-reader' ></i>
+                    <span class="text">Announcements</span>
+                </a>
+            </li>
+            <li class="{%if request.path == student_details_page%} active {%else%}{%endif%}">
+            <a href="{{student_details_page}}">
                 <i class='bx bxs-book-reader' ></i>
-                <span class="text">Announcements</span>
+                <span class="text">My Profile</span>
             </a>
         </li>
         <li>
