--- a/templates/dashboards/all_teacher_pages/base.html
+++ b/templates/dashboards/all_teacher_pages/base.html
@@ -7,6 +7,8 @@
 {% url 'select_class_attendance' as select_class_attendance %}
 {% url 'grade_student_nav' as grade_student_nav %}
 {% url 'annoucements' as annoucements%}
+{% url 'teacher_details_page' as teacher_details_page %}
+
 
 
 
@@ -43,11 +45,18 @@
             </li>
         </ul>
         <!--  -->
-        <ul class="side-menu">
+
+    <ul class="side-menu">
         <li class="{%if request.path == annoucements%}active{%else%}{%endif%}">
             <a href="{{annoucements}}">
                 <i class='bx bxs-book-reader' ></i>
                 <span class="text">Announcements</span>
+            </a>
+        </li>
+        <li class="{%if request.path == teacher_details_page%}active{%else%}{%endif%}">
+            <a href="{%url 'teacher_details_page'%}">
+                <i class='bx bxs-book-reader' ></i>
+                <span class="text">My Profile</span>
             </a>
         </li>
         <li>
@@ -77,7 +86,7 @@
                 <i class='bx bxs-bell' ></i>
                 <span class="num">8</span>
             </a>
-            <a href="{%url 'teacher_details_page' teacher_id=request.user.id%}" class="profile">
+            <a href="{%url 'teacher_details_page'%}" class="profile">
                 <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
             </a>
          </nav>
