--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -6,6 +6,8 @@
 {% url 'teacher_dashboard' as teacher_dashboard %}
 {% url 'annoucements' as annoucements%}
 {% url 'grade_student_nav' as grade_student_nav %}
+{% url 'teacher_details_page' as teacher_details_page%}
+
 
 
 
@@ -43,19 +45,25 @@
         </ul>
         <!--  -->
         <ul class="side-menu">
-        <li class="{%if request.path == select_class_attendance%}active{%else%}{%endif%}">
-            <a href="{{annoucements}}">
-                <i class='bx bxs-book-reader' ></i>
-                <span class="text">Announcements</span>
-            </a>
-        </li>
-        <li>
-            <a href="{%url 'logout'%}" class="logout">
-                <i class='bx bxs-log-out-circle' ></i>
-                <span class="text">Logout</span>
-            </a>
-        </li>
-    </ul>
+            <li class="{%if request.path == annoucements%}active{%else%}{%endif%}">
+                <a href="{{annoucements}}">
+                    <i class='bx bxs-book-reader' ></i>
+                    <span class="text">Announcements</span>
+                </a>
+            </li>
+            <li class="{%if request.path == teacher_details_page%}active{%else%}{%endif%}">
+                <a href="{%url 'teacher_details_page'%}">
+                    <i class='bx bxs-book-reader' ></i>
+                    <span class="text">My Profile</span>
+                </a>
+            </li>
+            <li>
+                <a href="{%url 'logout'%}" class="logout">
+                    <i class='bx bxs-log-out-circle' ></i>
+                    <span class="text">Logout</span>
+                </a>
+            </li>
+        </ul>
     </section>
     <!-- END OF SIDEBAR -->
 
@@ -76,7 +84,7 @@
                 <i class='bx bxs-bell' ></i>
                 <span class="num">8</span>
             </a>
-            <a href="{%url 'teacher_details_page' teacher_id=request.user.id%}" class="profile">
+            <a href="{%url 'teacher_details_page' %}" class="profile">
                 <img src="{{ request.user.profile_photo.url }}" alt="Profile Photo">
             </a>
          </nav>
