--- a/templates/dashboards/all_admin_pages/create_annoucement.html
+++ b/templates/dashboards/all_admin_pages/create_annoucement.html
@@ -20,7 +20,7 @@
                 {{form.description.label_tag}}<br/>
                 {{form.description}}
             </div>
-            <button type="submit" class="bg-blue-500 text-white py-2 px-5 rounded-lg">Post</button>
+            <button type="submit" class="bg-blue-500 text-white py-2 px-5 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></button>
         </form>
     </div>
 </div>
