--- a/templates/dashboards/all_admin_pages/subjects.html
+++ b/templates/dashboards/all_admin_pages/subjects.html
@@ -11,7 +11,7 @@
             <br>
             {{form.name}}
             <br>
-            <button class="mt-3 bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-primary/80 transition-colors">Create</button>    
+            <button class="mt-3 bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-primary/80 transition-colors"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Subject</span></button>    
         </form>
         </div>   
 
