--- a/templates/dashboards/all_admin_pages/assign_teacher.html
+++ b/templates/dashboards/all_admin_pages/assign_teacher.html
@@ -24,7 +24,7 @@
         <p class="text-lg font-medium text-gray-700 mb-1">{{form.class_name.label_tag}}</p>
         {{form.class_name}}
     </div>
-    <button class="bg-blue-500 p-2 px-3 text-white rounded-lg " type="submit">Submit</button>
+    <button class="bg-blue-500 p-2 px-3 text-white rounded-lg " type="submit"><i class="fa-solid fa-plus"></i><span class="pl-1">Assign Teacher</span></button>
 </form>
 </div>
 </div>
