--- a/templates/dashboards/all_admin_pages/delete_teacher.html
+++ b/templates/dashboards/all_admin_pages/delete_teacher.html
@@ -6,13 +6,13 @@
 
 <div class="text-black flex flex-col items-center justify-center m-3 rounded-lg p-3" style="background-color: #F9F9F9;">
     <h1 class="text-3xl font-bold my-8">Delete Teacher</h1>
-    <h2 class="text-2xl font-medium my-3">Are you sure you want to delete this teacher?</h2>
+    <h2 class="text-2xl font-medium my-3 text-center">Are you sure you want to delete this teacher?</h2>
     <p class="text-2xl text-gray-600 font-medium my-3">{{ teacher.user.first_name }} {{ teacher.user.last_name }}</p>
     <form action="{% url 'delete_teacher' teacher_id=teacher.id %}" method="post" enctype="multipart/form-data" class="rounded-lg w-full max-w-md">
         {% csrf_token %}
         <div class="flex justify-between my-8">
-            <a href="{%url 'teacher_detail' teacher.user.id%}" class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3">Go Back</a>
-            <button class="bg-red-500 text-white py-2 px-4 rounded-md mb-3"> Delete </button>  
+            <a href="{%url 'teacher_detail' teacher.user.id%}" class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3"><i class="fa-solid fa-arrow-left"></i><span class="pl-1">Go Back</span></a>
+            <button class="bg-red-500 text-white py-2 px-4 rounded-md mb-3"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete</span></button>  
         </div>
     </form>
   </div>
