--- a/templates/dashboards/all_admin_pages/edit_student.html
+++ b/templates/dashboards/all_admin_pages/edit_student.html
@@ -41,7 +41,7 @@
             {{form.parent_email}}
           </div>
   
-      <button class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3">Edit</button>
+      <button class="bg-blue-500 text-white py-2 px-4 rounded-md mb-3"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Student</span></button>
     </form>
   </div>
 
