--- a/templates/dashboards/all_teacher_pages/attendance_month_detail.html
+++ b/templates/dashboards/all_teacher_pages/attendance_month_detail.html
@@ -293,6 +293,6 @@
         </table>
     </div>
 </div>
-   <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5"  href="{% url 'update_attendance' class_id=classes.id year=year month=month %}">Update Attendance</a>
+   <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5"  href="{% url 'update_attendance' class_id=classes.id year=year month=month %}"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Update Attendance</span></a>
 </div>
 {% endblock section %}
