--- a/templates/dashboards/all_admin_pages/create_annoucement.html
+++ b/templates/dashboards/all_admin_pages/create_annoucement.html
@@ -9,15 +9,15 @@
         <form action="" method="post">
             {%csrf_token%}
             <div class="mb-4">
-                {{form.title.label_tag}}<br/>
+                <p class="font-medium text-gray-700 mb-1">{{form.title.label_tag}}</p>
                 {{form.title}}
             </div>
             <div class="mb-4">
-                {{form.subject.label_tag}}<br/>
+                <p class="font-medium text-gray-700 mb-1">{{form.subject.label_tag}}</p>
                 {{form.subject}}
             </div>
             <div class="mb-4">
-                {{form.description.label_tag}}<br/>
+                <p class="font-medium text-gray-700 mb-1">{{form.description.label_tag}}</p>
                 {{form.description}}
             </div>
             <button type="submit" class="bg-blue-500 text-white py-2 px-5 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Annoucement</span></button>
