--- a/templates/dashboards/all_admin_pages/edit_timetable.html
+++ b/templates/dashboards/all_admin_pages/edit_timetable.html
@@ -5,7 +5,7 @@
 
 
 <p class="m-3 p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">EDIT TIMETABLE</p>
-<div class="text-black flex flex-col items-center justify-center m-3 rounded-lg p-3" style="background-color: #F9F9F9;">
+<div class="text-black flex  justify-center m-3 rounded-lg p-3" style="background-color: #F9F9F9;">
     <form action="{%url 'edit_timetable' table_id=table.id%}" method="post">
         {% csrf_token %}
         <div class="mb-6">
@@ -129,9 +129,11 @@
                 </div>
             </div>
         </div>
-        <a href="{% url 'class_details' user_id=table.class_info.id %}" class="bg-blue-500 text-white m-3 py-2 p-4 rounded-md mb-3">Go Back</a>
-        <button type="submit" class="bg-gray-300 p-3 rounded-lg mt-2 text-gray-600 hover:text-gray-800">update</button>
+        <div class="mt-4">
+            <button type="submit" class="bg-blue-500 text-white m-1  p-2 rounded-md md:text-normal text-sm"><i class="fa-regular fa-pen-to-square"></i><span class="pl-1">Update Timetable</span></button>
+            <a href="{% url 'class_details' user_id=table.class_info.id %}" class="bg-blue-500 text-white m-1 p-2 rounded-md mb-3 md:text-normal text-sm"><i class="fa-solid fa-arrow-left"></i><span class="pl-1">Go Back</span></a>        
+        </div>
         </form>
-  </div>
+    </div>
   
 {%endblock section%}
