--- a/templates/dashboards/all_admin_pages/myClass.html
+++ b/templates/dashboards/all_admin_pages/myClass.html
@@ -3,7 +3,7 @@
 {% block section %}
 
 <div class="m-3 text-black rounded-lg">
-    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_class'%}" class="bg-blue-500 p-3 rounded-lg">+ Create Class</a></p>
+    <p class="text-right p-3 mb-3 font-normal text-white"><a href="{%url 'create_class'%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-solid fa-plus"></i><span class="pl-1">Create Class</span></a></p>
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">ALL Classes</p>
     {% if messages %}
     {% for message in messages %}
