--- a/templates/dashboards/all_teacher_pages/edit_record.html
+++ b/templates/dashboards/all_teacher_pages/edit_record.html
@@ -3,45 +3,7 @@
 {% block section %}
 {% load custom_filters %}
 
-<form method="post" action="{% url 'update_attendance' class_id=class.id year=year month=month %}" style="visibility: hidden;">
-    {% csrf_token %}
-    <table>
-        <thead>
-            <tr>
-                <th>Student Name</th>
-                {% for day in days_in_month %}
-                    <th>{{ day }}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for student in students %}
-                <tr>
-                    <td>{{ student.name }}</td>
-                    {% for day in days_in_month %}
-                        <td>
-                            {% with status=status_data.student.id.day %}
-                                <select name="status_{{ day }}_{{ student.id }}">
-                                    <option value="P" {% if status == 'P' %}selected{% endif %}>Present</option>
-                                    <option value="A" {% if status == 'A' %}selected{% endif %}>Absent</option>
-                                    <option value="D" {% if status == 'D' %}selected{% endif %}>Default</option>
-                                </select>
-                            {% endwith %}
-                        </td>
-                    {% endfor %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <button type="submit">Update</button>
-</form>
 
-
-
-
-<!--  -->
-<!--  -->
-<!--  -->
 <div class="m-3 rounded-lg mb-3 table-data" style="background-color: #F9F9F9;">
 <div>
 <form method="post" action="">
@@ -227,11 +189,8 @@
         </tbody>
     </table>
 
-    <button type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg">Save Attendance</button>
+    <button type="submit" class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Save Attendance</span></button>
 </form>
 </div>
 </div>
-
-
-
 {% endblock section %}
