--- a/templates/dashboards/all_teacher_pages/grade_form.html
+++ b/templates/dashboards/all_teacher_pages/grade_form.html
@@ -59,8 +59,8 @@
             <p class="md:text-lg text-md font-medium text-gray-700 mb-1">{{gradeForm.grade.label_tag}}</p>
             {{gradeForm.grade}}
         </div>
-        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" type="submit">submit</button>
-        <a href="{%url 'clear_grades' student_id=student.id%}" class="bg-red-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" >Clear Existing Form</a>
+        <button class="bg-blue-500 text-white py-2 px-4 rounded-lg md:text-lg text-normal md:font-medium font-normal mb-1" type="submit"><i class="fa-solid fa-cloud-arrow-up"></i><span class="pl-1">Submit</span></button>
+        <a href="{%url 'clear_grades' student_id=student.id%}" class="bg-red-500 text-white py-2 px-2 rounded-lg md:text-lg text-normal md:font-medium mb-1"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Clear Existing</span></a>
 
     </form>
 </div>
